hphp/hack/test/typecheck/case_sensitive_inheritance5.php.exp
File "case_sensitive_inheritance5.php", line 13, characters 19-21:
B inherits a method named `foO` whose name differs from this one (`FOO`) only by case. (Typing[4393])
  File "case_sensitive_inheritance5.php", line 6, characters 19-21:
  It was inherited from T as `~~fo~~O`. If you meant to override it, please use the same casing as the inherited method. Otherwise, please choose a different name for the new method
