hphp/hack/test/typecheck/case_sensitive_inheritance5.php
<?hh
class A {
  public function FOO(): void {}
}
trait T {
  public function foO(): void {}
  public function bar(): int {
    return 0;
  }
}
class B extends A {
  use T;
  public function FOO(): void {}
}
